--- a/org.eclipse.equinox.executable/bin/carbon/macosx/x86/Eclipse.app/Contents/MacOS/eclipse.ini
+++ b/org.eclipse.equinox.executable/bin/carbon/macosx/x86/Eclipse.app/Contents/MacOS/eclipse.ini
@@ -1,5 +1,7 @@
 -showsplash
 org.eclipse.platform
+--launcher.XXMaxPermSize
+256m
 -vmargs
 -Xdock:icon=../Resources/Eclipse.icns
 -XstartOnFirstThread
