--- a/org.eclipse.equinox.executable/bin/cocoa/macosx/x86_64/Eclipse.app/Contents/Info.plist
+++ b/org.eclipse.equinox.executable/bin/cocoa/macosx/x86_64/Eclipse.app/Contents/Info.plist
@@ -23,6 +23,36 @@
 		<string>????</string>
 	<key>CFBundleVersion</key>
 		<string>3.5</string>
+	<key>CFBundleDevelopmentRegion</key>
+		<string>English</string>
+	<key>CFBundleLocalizations</key>
+		<array>
+			<string>ar</string>
+			<string>cs</string>
+			<string>da</string>
+			<string>el</string>
+			<string>en</string>
+			<string>es</string>
+			<string>de</string>
+			<string>fi</string>
+			<string>fr</string>
+			<string>hu</string>
+			<string>it</string>
+			<string>iw</string>
+			<string>ja</string>
+			<string>ko</string>
+			<string>nl</string>
+			<string>no</string>
+			<string>pl</string>
+			<string>pt_BR</string>
+			<string>pt</string>
+			<string>ru</string>
+			<string>sv</string>
+			<string>tr</string>
+			<string>zh_HK</string>
+			<string>zh_TW</string>
+			<string>zh</string>
+		</array>
 		
 	<key>Eclipse</key>
 		<array>
